benchmark-results/7/merge/cseq/concurrentwitness2test.2024-11-08_13-30-27.logfiles/SV-COMP23_unreach-call.cseq-mix003_power.opt_pso.opt_rmo.opt_tso.opt.yml.log
ConcurrentWitness2Test/start.sh svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/mix003_power.opt_pso.opt_rmo.opt_tso.opt.yml/mix003_power.opt_pso.opt_rmo.opt_tso.opt.i --graphml-witness svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/mix003_power.opt_pso.opt_rmo.opt_tso.opt.yml/witness.graphml


--------------------------------------------------------------------------------


Traceback (most recent call last):
  File "/home/runner/work/ConcurrentWitness2Test/ConcurrentWitness2Test/ConcurrentWitness2Test/main.py", line 85, in translate_to_c
    sys.exit(-1)
SystemExit: -1
/tmp/BenchExec_run_49__vhx5/tmp/tmpltookgab.c
Compilation started
/tmp/BenchExec_run_49__vhx5/tmp/tmpltookgab.c: In function ‘P1’:
/tmp/BenchExec_run_49__vhx5/tmp/tmpltookgab.c:593:19: error: ‘FALSE’ undeclared (first use in this function)
  593 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_49__vhx5/tmp/tmpltookgab.c:593:19: note: each undeclared identifier is reported only once for each function it appears in
/tmp/BenchExec_run_49__vhx5/tmp/tmpltookgab.c: In function ‘P2’:
/tmp/BenchExec_run_49__vhx5/tmp/tmpltookgab.c:633:19: error: ‘FALSE’ undeclared (first use in this function)
  633 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_49__vhx5/tmp/tmpltookgab.c:634:19: error: ‘TRUE’ undeclared (first use in this function)
  634 |   weak$$choice2 = TRUE;;
      |                   ^~~~

Compilation ended (exit code 1)
Verdict: Compilation error
Verdict: Unknown error
